force-app/main/default/objects/OpportunityLineItem/fields/bt_stripe__Plan__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price</label>
    <referenceTo>bt_stripe__Plan2__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>