force-app/main/default/objects/OpportunityLineItem/fields/bt_stripe__Product_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan</fullName>
                <default>true</default>
                <label>Plan</label>
            </value>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Do not Include</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>